--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,10 +18,11 @@
         </label>
 
         <div class="trigger">
+          <a class="page-link" href="/bookmarks.html">Bookmarks</a>
           {%- for path in page_paths -%}
             {%- assign my_page = site.pages | where: "path", path | first -%}
             {%- if my_page.title -%}
-            <a class="page-link" href="https://viktorbezhenar.in.ua/bookmarks.html">Bookmarks</a>
+            <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
             {%- endif -%}
           {%- endfor -%}
         </div>
@@ -29,4 +30,3 @@
     {%- endif -%}
   </div>
 </header>
-
