--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
         </label>
 
         <div class="trigger">
-          <a class="page-link" href="/bookmarks.html">Bookmarks</a>
+          <a class="page-link" href="https://booklog.viktorbezhenar.in.ua/">Vik's Booklog</a>
           {%- for path in page_paths -%}
             {%- assign my_page = site.pages | where: "path", path | first -%}
             {%- if my_page.title -%}
